@@ -6,6 +6,14 @@
 #
 # Regular expressions are extended POSIX variety
 #
+# Note: 
+# o Anthing after a '#' on a line is treated as a comment,
+#   unless the '#' is escaped (preceded by a '/')
+# o A '/r', '/n' and '/0' are always treated as litereals
+#   and terminate the the current line (and file in the case of '\0')
+# o Anything else after a '/' is treated as a literal.
+#   Thus "/#" -> '#', "//' -> '/'
+#
 ######################################################################
 
 ^[a-k]: localhost
